# bulk-insert

./: .gitignore  README.md  pyproject.toml  requirements.txt
bulk_insert/: manage.py
bulk_insert/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
bulk_insert/api/migrations/: 0001_initial.py  0002_product_image.py  0003_alter_productvariant_product_id.py
bulk_insert/bulk_insert/: asgi.py  settings.py  urls.py  wsgi.py
