[tool.poetry]
name = "bulk-insert"
version = "0.1.0"
description = "django api for bulk insert"
authors = ["tin3ga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.14.0"
environs = "^11.0.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
